--- a/uc-popups.css
+++ b/uc-popups.css
@@ -40,7 +40,7 @@ tabmodalprompt input {
     border-radius: 3px !important;
 }
 
-tabmodalprompt input:focus {
+tabmodalprompt input:focus-visible {
     background-color: var(--desaturate-dimmed-further) !important;
 }
 
@@ -104,7 +104,7 @@ tabmodalprompt .checkbox-check[checked="true"] {
 /* in-content autocomplete popup */
 panel#PopupAutoComplete[type="autocomplete-richlistbox"] {
     padding: var(--menupopup-inner-padding) !important;
-    background-color: var(--menu-background-color) !important;
+    background-color: var(--autocomplete-background) !important;
     color: var(--menu-color) !important;
     border: none !important;
     border-radius: var(--menupopup-border-radius);
@@ -127,6 +127,41 @@ panel#PopupAutoComplete[type="autocomplete-richlistbox"]
     > richlistitem[selected]:not([disabled]) {
     background-color: var(--arrowpanel-dimmed) !important;
     color: var(--menu-color) !important;
+}
+
+panel#PopupAutoComplete[type="autocomplete-richlistbox"]
+    richlistitem:is([originaltype="generatedPassword"], [originaltype="loginWithOrigin"], [originaltype="login"])
+    .ac-site-icon {
+    fill: currentColor !important;
+    fill-opacity: 0.8;
+    -moz-context-properties: fill, fill-opacity !important;
+    margin-inline-end: 6px !important;
+}
+
+panel#PopupAutoComplete[type="autocomplete-richlistbox"] > richlistbox > richlistitem[originaltype="generatedPassword"] > .two-line-wrapper > .labels-wrapper > .generated-password-autosave,
+panel#PopupAutoComplete[type="autocomplete-richlistbox"] > richlistbox > richlistitem[originaltype="importableLearnMore"] > .ac-title,
+panel#PopupAutoComplete[type="autocomplete-richlistbox"] > richlistbox > richlistitem > .two-line-wrapper > .labels-wrapper > .line2-label {
+	opacity: 1 !important;
+    color: var(--panel-shortcut-color) !important;
+}
+
+panel#PopupAutoComplete[type="autocomplete-richlistbox"] > richlistbox > richlistitem[originaltype="loginsFooter"] {
+	color: inherit !important;
+	border: none !important;
+    margin-top: 4px;
+	background-color: var(--arrowpanel-dimmed) !important;
+}
+
+panel#PopupAutoComplete[type="autocomplete-richlistbox"] > richlistbox > richlistitem[originaltype="loginsFooter"] .ac-title {
+    margin-inline: 0 !important;
+}
+
+panel#PopupAutoComplete[type="autocomplete-richlistbox"] > richlistbox > richlistitem[originaltype="loginsFooter"]:is(:hover, [selected]) {
+	background-color: var(--arrowpanel-dimmed-further) !important;
+}
+
+panel#PopupAutoComplete[type="autocomplete-richlistbox"] > richlistbox > richlistitem[originaltype="loginsFooter"]:hover[selected] {
+	background-color: var(--arrowpanel-dimmed-even-further) !important;
 }
 
 /* update notifications */
