--- a/uc-variables.css
+++ b/uc-variables.css
@@ -97,8 +97,8 @@ menupopup {
     --ui-solid-button-active-bgcolor: var(--arrowpanel-dimmed-even-further) !important;
     --ebmp-hover-bgcolor: hsl(233, 24%, 33%) !important;
     --ebmp-focus-bgcolor: hsl(233, 24%, 38%) !important;
-    --urlbar-popup-url-color: hsl(251, 100%, 64%) !important;
-    --urlbar-popup-action-color: hsl(340, 73%, 58%) !important;
+    --urlbar-popup-url-color: var(--purple-35) !important;
+    --urlbar-popup-action-color: var(--pink-action) !important;
     --lwt-popup-brighttext-url-color: var(--urlbar-popup-action-color) !important;
     --toolbarbutton-icon-fill-opacity: 1 !important;
     --tab-min-height: 35px !important;
